# Medical-AI

./: Dockerfile.java  README.md  build.sh  deploy.sh  design.md  docker-compose.yml  pom.xml  requirements.md  start.sh  stop.sh  tasks.md
cpp-services/: CMakeLists.txt  Dockerfile
cpp-services/proto/: medical_imaging.proto
cpp-services/src/: imaging_service.h  main.cpp
database/: init.sql
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/Layout/: Layout.js
frontend/src/pages/Dashboard/: Dashboard.js
frontend/src/pages/DataManagement/: DataManagement.js
frontend/src/pages/ModelManagement/: ModelManagement.js
frontend/src/pages/Monitoring/: Monitoring.js
frontend/src/pages/PatientAnalysis/: PatientAnalysis.js
frontend/src/pages/Settings/: Settings.js
frontend/src/store/: store.js
js-services/: Dockerfile  package.json
js-services/src/: server.js
js-services/src/agents/: medical-ai-agent.js
js-services/src/analyzers/: realtime-analyzer.js
js-services/src/processors/: document-processor.js  image-processor.js
js-services/src/websocket/: websocket-handler.js
nginx/: nginx.conf
python-agents/: Dockerfile  main.py  medical_agents.py  model_gateway.py  requirements.txt
src/main/java/com/medical/ai/: MedicalIntelligenceApplication.java
src/main/java/com/medical/ai/controller/: MedicalAIController.java
src/main/java/com/medical/ai/model/: PatientData.java
src/main/java/com/medical/ai/service/: CentralReasoningService.java  DiagnosisReasoningService.java  DiagnosticImagingService.java  LabReportService.java  PatientIntakeService.java  PhysicalExamService.java  PrescriptionService.java  TreatmentPlanningService.java
